--- a/07_pratica_mergulho_nas_ides_online_para_aprendizado_de_maquina.ipynb
+++ b/07_pratica_mergulho_nas_ides_online_para_aprendizado_de_maquina.ipynb
@@ -33,7 +33,7 @@
       "cell_type": "markdown",
       "source": [
         "\n",
-        "# Introdução aos Jupiter Notebooks\n",
+        "# Introdução aos Jupyter Notebooks\n",
         "\n",
         "\n",
         "Neste vídeo, Rob apresenta o Jupiter Notebooks e explica sua importância para cientistas de dados que codificam em Python.\n",
@@ -42,7 +42,7 @@
         "O vídeo aborda como usar Jupiter Notebooks em uma máquina local, bem como alguns ambientes de nuvem que fornecem Jupiter Notebooks.\n",
         "\n",
         "\n",
-        "# Utilidade dos Jupiter Notebooks\n",
+        "# Utilidade dos Jupyter Notebook\n",
         "\n",
         "\n",
         "Antes de mergulhar nos Jupiter Notebooks, é importante entender por que eles são úteis. Comandos em python podem ser digitados diretamente em qualquer terminal de um computador executando Linux, macOS ou PowerShell no Windows.\n",
@@ -59,7 +59,7 @@
         "Ele foi desenvolvido para tornar o Python mais interativo e fácil de usar. Sendo assim, os Notebooks Júpiter foram construídos a partir do IPython.\n",
         "\n",
         "\n",
-        "# Executando notebooks Júpiter localmente\n",
+        "# Executando Jupyter Notebook localmente\n",
         "\n",
         "\n",
         "Para executar o Jupiter Notebooks localmente:\n",
@@ -71,7 +71,7 @@
         "Os arquivos no diretório atual podem ser acessados e editados nos Jupyter Notebooks.\n",
         "\n",
         "\n",
-        "# Introdução ao Laboratório Júpiter\n",
+        "# Introdução ao Laboratório Jupyter\n",
         "\n",
         "\n",
         "Jupiter Lab é apresentado como a versão mais recente dos Jupiter Notebooks com funcionalidades adicionais.\n",
