--- a/pt/14_pratica_redes_neurais_convolucionais_1_(deep_learning).ipynb
+++ b/pt/14_pratica_redes_neurais_convolucionais_1_(deep_learning).ipynb
@@ -36,7 +36,7 @@
         "\n",
         "# Redes neurais convolucionais\n",
         "\n",
-        "Difere-se de uma rede neural tradicional apenas na camada de entrada, a qual sofre uma transformação nos dados. Em geral usada em visão computacional, trazendo uma melhor performance melhor do até então outro melhor modelo da área, a SVM. Ao decorrer do processo de aprendizagem, extrai características mais importantes de um problema.\n",
+        "Difere-se de uma rede neural tradicional apenas na camada de entrada, a qual sofre uma transformação nos dados. Em geral usada em visão computacional, trazendo uma melhor performance melhor do que até então outro melhor modelo da área, a SVM. Ao decorrer do processo de aprendizagem, extrai características mais importantes de um problema.\n",
         "\n",
         "\n",
         "# Operador de convolução\n",
